--- a/welcome email HTML templates/welcome-email-ne.html
+++ b/welcome email HTML templates/welcome-email-ne.html
@@ -45,7 +45,7 @@
   <tbody>
    <tr>
         <td>
-            <p>Dear {!Contact.FirstName},</p>
+            <p>Dear [NAME],</p>
         </td>
    </tr>
     <tr>
